<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="SetingsFragment"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchBackStack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_backstack"
        android:textSize="30sp" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_fragment"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radioButtonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/add"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radioButtonReplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/replace"
            android:textSize="30sp" />
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchBackAsRemove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_as_remove_fragment"
        android:textSize="30sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchDeleteBeforeAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_before_add"
        android:textSize="30sp" />




</LinearLayout>